add flexslider to scripts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		
 		<!--begin scripts-->
 		<script src="js/jquery-1.8.2.min.js"></script>
+		<script src="flexslider/jquery.flexslider.js"></script>
 		<script src="js/scripts.js"></script>
+		
 		<!--end scripts-->
 	</head>
 	<body>
@@ -103,7 +105,7 @@
 			<div id="navigation">
 				
 			</div>
-	<!--	
+		
 			<div id="page01">
 				<div class="paragraph">
 					<p>
@@ -321,7 +323,7 @@
 					<img src="images/illustrations/illustration10" alt="...illustration10..." width="540" height="540" />
 				</div>
 			</div>
-	-->			
+			
 			<div id="credits">
 				<div class="creditsLeft">
 					<h6>[ created by ]</h6>
