table of contents + navigation

--- a/index.html
+++ b/index.html
@@ -101,10 +101,71 @@
 				<h5 class="menu1">the <span id="item01-text">sample1</span>,</h5>
 				<h5 class="menu2">the <span id="item02-text">sample2</span>,</h5>
 				<h5 class="menu3">& the <span id="item03-text">sample3</span></h5>
-			</div>
-				
-			<div id="navigation">
-				
+				<div id="toc">
+						<a class="tocPage01">
+							<div class="selectPage">
+								<img src="images/toc/page01.png" alt="page01" width="48" height="48"/>Once upon a time...
+							</div>
+						</a>
+						<a class="tocPage02">
+							<div class="selectPage">
+								<img src="images/toc/page02.png" alt="page02" width="48" height="48"/>So it should come...
+							</div>
+						</a>
+						<a class="tocPage03">
+							<div class="selectPage">
+								<img src="images/toc/page03.png" alt="page03" width="48" height="48"/>When the Prince...
+							</div>
+						</a>
+						<a class="tocPage04">
+							<div class="selectPage">
+								<img src="images/toc/page04.png" alt="page04" width="48" height="48"/>Now this went on...
+							</div>
+						</a>
+						<a class="tocPage05">
+							<div class="selectPage">
+								<img src="images/toc/page05.png" alt="page05" width="48" height="48"/>When the Prince...
+							</div>
+						</a>
+						<a class="tocPage06">
+							<div class="selectPage">
+								<img src="images/toc/page06.png" alt="page06" width="48" height="48"/>After spending the...
+							</div>
+						</a>
+						<a class="tocPage07">
+							<div class="selectPage">
+								<img src="images/toc/page07.png" alt="page07" width="48" height="48"/>When the Prince...
+							</div>
+						</a>
+						<a class="tocPage08">
+							<div class="selectPage">
+								<img src="images/toc/page08.png" alt="page08" width="48" height="48"/>The Princess was...
+							</div>
+						</a>
+						<a class="tocPage09">
+							<div class="selectPage">
+								<img src="images/toc/page09.png" alt="page09" width="48" height="48"/>When the Prince...
+							</div>
+						</a>
+						<a class="tocPage10">
+							<div class="selectPage">
+								<img src="images/toc/page10.png" alt="page10" width="48" height="48"/>The King and Queen...
+							</div>
+						</a>
+						<a class="tocPage11">
+							<div class="selectPage">
+								<img src="images/toc/page11.png" alt="credits" width="48" height="48"/>[ Credits ]
+							</div>
+						</a>
+				</div>
+				<div class="navigation">
+					<div class="nav-prev">
+						<a class="prevChoose">«</a>
+					</div>
+					<div class="nav-next">
+						<a class="nextFlexslider">»</a>
+					</div>
+				</div>
 			</div>
 			
 			<div class="flexslider page">
