--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		
 		<!--begin scripts-->
 		<script src="js/jquery-1.8.2.min.js"></script>
+		<script src="jQuery-Choice/jquery-choice.js"></script>
 		<script src="flexslider/jquery.flexslider.js"></script>
 		<script src="js/scripts.js"></script>
 		
