--- a/index.html
+++ b/index.html
@@ -46,52 +46,52 @@
 					<h4>.. select three ..</h4>
 					<div id="options">
 						<div class="tile">
-							<img class="item01 default" href="images/choose/default/item01.png" alt="item01" width="128" height="128" />
-							<img class="item01 selected" href="images/choose/selected/item01.png" alt="item01" width="128" height="128" />
+							<img class="object01 default" href="images/choose/default/object01.png" alt="object01" width="128" height="128" />
+							<img class="object01 selected" href="images/choose/selected/object01.png" alt="object01" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item02 default" href="images/choose/default/item02.png" alt="item02" width="128" height="128" />
-							<img class="item02 selected" href="images/choose/selected/item02.png" alt="item02" width="128" height="128" />
+							<img class="object02 default" href="images/choose/default/object02.png" alt="object02" width="128" height="128" />
+							<img class="object02 selected" href="images/choose/selected/object02.png" alt="object02" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item03 default" href="images/choose/default/item03.png" alt="item03" width="128" height="128" />
-							<img class="item03 selected" href="images/choose/selected/item03.png" alt="item03" width="128" height="128" />
+							<img class="object03 default" href="images/choose/default/object03.png" alt="object03" width="128" height="128" />
+							<img class="object03 selected" href="images/choose/selected/object03.png" alt="object03" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item04 default" href="images/choose/default/item04.png" alt="item04" width="128" height="128" />
-							<img class="item04 selected" href="images/choose/selected/item04.png" alt="item04" width="128" height="128" />
+							<img class="object04 default" href="images/choose/default/object04.png" alt="object04" width="128" height="128" />
+							<img class="object04 selected" href="images/choose/selected/object04.png" alt="object04" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item05 default" href="images/choose/default/item05.png" alt="item05" width="128" height="128" />
-							<img class="item05 selected" href="images/choose/selected/item05.png" alt="item05" width="128" height="128" />
+							<img class="object05 default" href="images/choose/default/object05.png" alt="object05" width="128" height="128" />
+							<img class="object05 selected" href="images/choose/selected/object05.png" alt="object05" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item06 default" href="images/choose/default/item06.png" alt="item06" width="128" height="128" />
-							<img class="item06 selected" href="images/choose/selected/item06.png" alt="item06" width="128" height="128" />
+							<img class="object06 default" href="images/choose/default/object06.png" alt="object06" width="128" height="128" />
+							<img class="object06 selected" href="images/choose/selected/object06.png" alt="object06" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item07 default" href="images/choose/default/item07.png" alt="item07" width="128" height="128" />
-							<img class="item07 selected" href="images/choose/selected/item07.png" alt="item07" width="128" height="128" />
+							<img class="object07 default" href="images/choose/default/object07.png" alt="object07" width="128" height="128" />
+							<img class="object07 selected" href="images/choose/selected/object07.png" alt="object07" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item08 default" href="images/choose/default/item08.png" alt="item08" width="128" height="128" />
-							<img class="item08 selected" href="images/choose/selected/item08.png" alt="item08" width="128" height="128" />
+							<img class="object08 default" href="images/choose/default/object08.png" alt="object08" width="128" height="128" />
+							<img class="object08 selected" href="images/choose/selected/object08.png" alt="object08" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item09 default" href="images/choose/default/item09.png" alt="item09" width="128" height="128" />
-							<img class="item09 selected" href="images/choose/selected/item09.png" alt="item09" width="128" height="128" />
+							<img class="object09 default" href="images/choose/default/object09.png" alt="object09" width="128" height="128" />
+							<img class="object09 selected" href="images/choose/selected/object09.png" alt="object09" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item10 default" href="images/choose/default/item10.png" alt="item10" width="128" height="128" />
-							<img class="item10 selected" href="images/choose/selected/item10.png" alt="item10" width="128" height="128" />
+							<img class="object10 default" href="images/choose/default/object10.png" alt="object10" width="128" height="128" />
+							<img class="object10 selected" href="images/choose/selected/object10.png" alt="object10" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item11 default" href="images/choose/default/item11.png" alt="item11" width="128" height="128" />
-							<img class="item11 selected" href="images/choose/selected/item11.png" alt="item11" width="128" height="128" />
+							<img class="object11 default" href="images/choose/default/object11.png" alt="object11" width="128" height="128" />
+							<img class="object11 selected" href="images/choose/selected/object11.png" alt="object11" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="item12 default" href="images/choose/default/item12.png" alt="item12" width="128" height="128" />
-							<img class="item12 selected" href="images/choose/selected/item12.png" alt="item12" width="128" height="128" />
+							<img class="object12 default" href="images/choose/default/object12.png" alt="object12" width="128" height="128" />
+							<img class="object12 selected" href="images/choose/selected/object12.png" alt="object12" width="128" height="128" />
 						</div>
 					</div>	
 				</div>
