--- a/index.html
+++ b/index.html
@@ -46,52 +46,52 @@
 					<h4>.. select three ..</h4>
 					<div id="options">
 						<div class="tile">
-							<img class="object01 default" href="images/choose/default/object01.png" alt="object01" width="128" height="128" />
-							<img class="object01 selected" href="images/choose/selected/object01.png" alt="object01" width="128" height="128" />
+							<img class="object01 default" src="images/choose/default/object01.png" alt="object01" width="128" height="128" />
+							<img class="object01 selected" src="images/choose/selected/object01.png" alt="object01" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object02 default" href="images/choose/default/object02.png" alt="object02" width="128" height="128" />
-							<img class="object02 selected" href="images/choose/selected/object02.png" alt="object02" width="128" height="128" />
+							<img class="object02 default" src="images/choose/default/object02.png" alt="object02" width="128" height="128" />
+							<img class="object02 selected" src="images/choose/selected/object02.png" alt="object02" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object03 default" href="images/choose/default/object03.png" alt="object03" width="128" height="128" />
-							<img class="object03 selected" href="images/choose/selected/object03.png" alt="object03" width="128" height="128" />
+							<img class="object03 default" src="images/choose/default/object03.png" alt="object03" width="128" height="128" />
+							<img class="object03 selected" src="images/choose/selected/object03.png" alt="object03" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object04 default" href="images/choose/default/object04.png" alt="object04" width="128" height="128" />
-							<img class="object04 selected" href="images/choose/selected/object04.png" alt="object04" width="128" height="128" />
+							<img class="object04 default" src="images/choose/default/object04.png" alt="object04" width="128" height="128" />
+							<img class="object04 selected" src="images/choose/selected/object04.png" alt="object04" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object05 default" href="images/choose/default/object05.png" alt="object05" width="128" height="128" />
-							<img class="object05 selected" href="images/choose/selected/object05.png" alt="object05" width="128" height="128" />
+							<img class="object05 default" src="images/choose/default/object05.png" alt="object05" width="128" height="128" />
+							<img class="object05 selected" src="images/choose/selected/object05.png" alt="object05" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object06 default" href="images/choose/default/object06.png" alt="object06" width="128" height="128" />
-							<img class="object06 selected" href="images/choose/selected/object06.png" alt="object06" width="128" height="128" />
+							<img class="object06 default" src="images/choose/default/object06.png" alt="object06" width="128" height="128" />
+							<img class="object06 selected" src="images/choose/selected/object06.png" alt="object06" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object07 default" href="images/choose/default/object07.png" alt="object07" width="128" height="128" />
-							<img class="object07 selected" href="images/choose/selected/object07.png" alt="object07" width="128" height="128" />
+							<img class="object07 default" src="images/choose/default/object07.png" alt="object07" width="128" height="128" />
+							<img class="object07 selected" src="images/choose/selected/object07.png" alt="object07" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object08 default" href="images/choose/default/object08.png" alt="object08" width="128" height="128" />
-							<img class="object08 selected" href="images/choose/selected/object08.png" alt="object08" width="128" height="128" />
+							<img class="object08 default" src="images/choose/default/object08.png" alt="object08" width="128" height="128" />
+							<img class="object08 selected" src="images/choose/selected/object08.png" alt="object08" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object09 default" href="images/choose/default/object09.png" alt="object09" width="128" height="128" />
-							<img class="object09 selected" href="images/choose/selected/object09.png" alt="object09" width="128" height="128" />
+							<img class="object09 default" src="images/choose/default/object09.png" alt="object09" width="128" height="128" />
+							<img class="object09 selected" src="images/choose/selected/object09.png" alt="object09" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object10 default" href="images/choose/default/object10.png" alt="object10" width="128" height="128" />
-							<img class="object10 selected" href="images/choose/selected/object10.png" alt="object10" width="128" height="128" />
+							<img class="object10 default" src="images/choose/default/object10.png" alt="object10" width="128" height="128" />
+							<img class="object10 selected" src="images/choose/selected/object10.png" alt="object10" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object11 default" href="images/choose/default/object11.png" alt="object11" width="128" height="128" />
-							<img class="object11 selected" href="images/choose/selected/object11.png" alt="object11" width="128" height="128" />
+							<img class="object11 default" src="images/choose/default/object11.png" alt="object11" width="128" height="128" />
+							<img class="object11 selected" src="images/choose/selected/object11.png" alt="object11" width="128" height="128" />
 						</div>
 						<div class="tile">
-							<img class="object12 default" href="images/choose/default/object12.png" alt="object12" width="128" height="128" />
-							<img class="object12 selected" href="images/choose/selected/object12.png" alt="object12" width="128" height="128" />
+							<img class="object12 default" src="images/choose/default/object12.png" alt="object12" width="128" height="128" />
+							<img class="object12 selected" src="images/choose/selected/object12.png" alt="object12" width="128" height="128" />
 						</div>
 					</div>	
 				</div>
