--- a/index.html
+++ b/index.html
@@ -48,22 +48,27 @@
 						<div class="tile">
 							<img class="object01 default" src="images/choose/default/object01.png" alt="object01" width="128" height="128" />
 							<img class="object01 selected" src="images/choose/selected/object01.png" alt="object01" width="128" height="128" />
+							<div class="name hidden">Toaster</div>
 						</div>
 						<div class="tile">
 							<img class="object02 default" src="images/choose/default/object02.png" alt="object02" width="128" height="128" />
 							<img class="object02 selected" src="images/choose/selected/object02.png" alt="object02" width="128" height="128" />
+							<div class="name hidden">Bones</div>
 						</div>
 						<div class="tile">
 							<img class="object03 default" src="images/choose/default/object03.png" alt="object03" width="128" height="128" />
 							<img class="object03 selected" src="images/choose/selected/object03.png" alt="object03" width="128" height="128" />
+							<div class="name hidden">Porcupine</div>
 						</div>
 						<div class="tile">
 							<img class="object04 default" src="images/choose/default/object04.png" alt="object04" width="128" height="128" />
 							<img class="object04 selected" src="images/choose/selected/object04.png" alt="object04" width="128" height="128" />
+							<div class="name hidden">Pineapple</div>
 						</div>
 						<div class="tile">
 							<img class="object05 default" src="images/choose/default/object05.png" alt="object05" width="128" height="128" />
 							<img class="object05 selected" src="images/choose/selected/object05.png" alt="object05" width="128" height="128" />
+							<div class="name hidden">Pins</div>
 						</div>
 						<div class="tile">
 							<img class="object06 default" src="images/choose/default/object06.png" alt="object06" width="128" height="128" />
@@ -88,10 +93,12 @@
 						<div class="tile">
 							<img class="object11 default" src="images/choose/default/object11.png" alt="object11" width="128" height="128" />
 							<img class="object11 selected" src="images/choose/selected/object11.png" alt="object11" width="128" height="128" />
+							<div class="name hidden">Toaster</div>
 						</div>
 						<div class="tile">
 							<img class="object12 default" src="images/choose/default/object12.png" alt="object12" width="128" height="128" />
 							<img class="object12 selected" src="images/choose/selected/object12.png" alt="object12" width="128" height="128" />
+							<div class="name hidden">Dragon</div>
 						</div>
 					</div>	
 				</div>
@@ -99,9 +106,9 @@
 	
 			<div id="menu" class="page">
 				<h3>The Prince &</h3>
-				<h5 class="menu1">the <span id="item01-text">sample1</span>,</h5>
-				<h5 class="menu2">the <span id="item02-text">sample2</span>,</h5>
-				<h5 class="menu3">& the <span id="item03-text">sample3</span></h5>
+				<h5 class="menu1">the <span class="firstItemText">sample1</span>,</h5>
+				<h5 class="menu2">the <span class="secondItemText">sample2</span>,</h5>
+				<h5 class="menu3">& the <span class="thirdItemText">sample3</span></h5>
 				<div id="toc">
 						<a class="tocPage01">
 							<div class="selectPage">
