"item" --> "object" .. lowercase names .. spans where needed

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
 						<div class="tile">
 							<img class="object01 default" src="images/choose/default/object01.png" alt="object01" width="128" height="128" />
 							<img class="object01 selected" src="images/choose/selected/object01.png" alt="object01" width="128" height="128" />
-							<div class="name hidden">Toaster</div>
+							<div class="name hidden">toaster</div>
 						</div>
 						<div class="tile">
 							<img class="object02 default" src="images/choose/default/object02.png" alt="object02" width="128" height="128" />
 							<img class="object02 selected" src="images/choose/selected/object02.png" alt="object02" width="128" height="128" />
-							<div class="name hidden">Bones</div>
+							<div class="name hidden">bones</div>
 						</div>
 						<div class="tile">
 							<img class="object03 default" src="images/choose/default/object03.png" alt="object03" width="128" height="128" />
 							<img class="object03 selected" src="images/choose/selected/object03.png" alt="object03" width="128" height="128" />
-							<div class="name hidden">Porcupine</div>
+							<div class="name hidden">porcupine</div>
 						</div>
 						<div class="tile">
 							<img class="object04 default" src="images/choose/default/object04.png" alt="object04" width="128" height="128" />
 							<img class="object04 selected" src="images/choose/selected/object04.png" alt="object04" width="128" height="128" />
-							<div class="name hidden">Pineapple</div>
+							<div class="name hidden">pineapple</div>
 						</div>
 						<div class="tile">
 							<img class="object05 default" src="images/choose/default/object05.png" alt="object05" width="128" height="128" />
 							<img class="object05 selected" src="images/choose/selected/object05.png" alt="object05" width="128" height="128" />
-							<div class="name hidden">Pins</div>
+							<div class="name hidden">pins</div>
 						</div>
 						<div class="tile">
 							<img class="object06 default" src="images/choose/default/object06.png" alt="object06" width="128" height="128" />
@@ -93,12 +93,12 @@
 						<div class="tile">
 							<img class="object11 default" src="images/choose/default/object11.png" alt="object11" width="128" height="128" />
 							<img class="object11 selected" src="images/choose/selected/object11.png" alt="object11" width="128" height="128" />
-							<div class="name hidden">Toaster</div>
+							<div class="name hidden">bee hive</div>
 						</div>
 						<div class="tile">
 							<img class="object12 default" src="images/choose/default/object12.png" alt="object12" width="128" height="128" />
 							<img class="object12 selected" src="images/choose/selected/object12.png" alt="object12" width="128" height="128" />
-							<div class="name hidden">Dragon</div>
+							<div class="name hidden">dragon</div>
 						</div>
 					</div>	
 				</div>
@@ -106,9 +106,9 @@
 	
 			<div id="menu" class="page">
 				<h3>The Prince &</h3>
-				<h5 class="menu1">the <span class="firstItemText">sample1</span>,</h5>
-				<h5 class="menu2">the <span class="secondItemText">sample2</span>,</h5>
-				<h5 class="menu3">& the <span class="thirdItemText">sample3</span></h5>
+				<h5 class="menu1">the <span class="firstObjectText">sample1</span>,</h5>
+				<h5 class="menu2">the <span class="secondObjectText">sample2</span>,</h5>
+				<h5 class="menu3">& the <span class="thirdObjectText">sample3</span></h5>
 				<div id="toc">
 						<a class="tocPage01">
 							<div class="selectPage">
@@ -261,7 +261,7 @@
 								before the Prince 
 								went to bed, 
 								the Princess slipped 
-								her [item one] under 
+								her <span class="firstObjectText"></span> under 
 								the one hundred mattresses. 
 							</p>
 						</div>
@@ -306,7 +306,7 @@
 								before the Prince 
 								went to bed, 
 								the Princess slipped 
-								her [item two] under 
+								her <span class="secondObjectText"></span> under 
 								the one hundred mattresses. 
 							</p>
 						</div>
@@ -346,7 +346,7 @@
 								before the Prince 
 								went to bed, 
 								the Princess slipped 
-								her [item three] 
+								her <span class="thirdObjectText"></span> 
 								under the one hundred 
 								mattresses. 
 							</p>
@@ -370,7 +370,7 @@
 								another mattress. 
 								I felt like I was sleeping 
 								on a lump as big 
-								as a [item three].” 
+								as a <span class="thirdObjectText"></span>.” 
 							</p>
 						</div>
 						<div class="illustration">
