set up thumbs in js for TOC and nav ( + added placeholder toc object images )

--- a/index.html
+++ b/index.html
@@ -49,26 +49,36 @@
 							<img class="object01 default" src="images/choose/default/object01.png" alt="object01" width="128" height="128" />
 							<img class="object01 selected" src="images/choose/selected/object01.png" alt="object01" width="128" height="128" />
 							<div class="name hidden">toaster</div>
+							<img class="tocThumb hidden" src="images/toc/object01.png" alt="object01" width="48" height="48" />
+							<img class="navThumb hidden" src="images/thumbs/object01.png" alt="object01" width="48" height="48" />
 						</div>
 						<div class="tile">
 							<img class="object02 default" src="images/choose/default/object02.png" alt="object02" width="128" height="128" />
 							<img class="object02 selected" src="images/choose/selected/object02.png" alt="object02" width="128" height="128" />
 							<div class="name hidden">bones</div>
+							<img class="tocThumb hidden" src="images/toc/object02.png" alt="object02" width="48" height="48" />
+							<img class="navThumb hidden" src="images/thumbs/object02.png" alt="object02" width="48" height="48" />
 						</div>
 						<div class="tile">
 							<img class="object03 default" src="images/choose/default/object03.png" alt="object03" width="128" height="128" />
 							<img class="object03 selected" src="images/choose/selected/object03.png" alt="object03" width="128" height="128" />
 							<div class="name hidden">porcupine</div>
+							<img class="tocThumb hidden" src="images/toc/object03.png" alt="object03" width="48" height="48" />
+							<img class="navThumb hidden" src="images/thumbs/object03.png" alt="object03" width="48" height="48" />
 						</div>
 						<div class="tile">
 							<img class="object04 default" src="images/choose/default/object04.png" alt="object04" width="128" height="128" />
 							<img class="object04 selected" src="images/choose/selected/object04.png" alt="object04" width="128" height="128" />
 							<div class="name hidden">pineapple</div>
+							<img class="tocThumb hidden" src="images/toc/object04.png" alt="object04" width="48" height="48" />
+							<img class="navThumb hidden" src="images/thumbs/object04.png" alt="object04" width="48" height="48" />
 						</div>
 						<div class="tile">
 							<img class="object05 default" src="images/choose/default/object05.png" alt="object05" width="128" height="128" />
 							<img class="object05 selected" src="images/choose/selected/object05.png" alt="object05" width="128" height="128" />
 							<div class="name hidden">pins</div>
+							<img class="tocThumb hidden" src="images/toc/object05.png" alt="object05" width="48" height="48" />
+							<img class="navThumb hidden" src="images/thumbs/object05.png" alt="object05" width="48" height="48" />
 						</div>
 						<div class="tile">
 							<img class="object06 default" src="images/choose/default/object06.png" alt="object06" width="128" height="128" />
@@ -127,7 +137,7 @@
 						</a>
 						<a class="tocPage04">
 							<div class="selectPage">
-								<img src="images/toc/page04.png" alt="page04" width="48" height="48"/>Now this went on...
+								<img class="firstObjectTOCThumb" src="images/toc/page04.png" alt="page04" width="48" height="48"/>Now this went on...
 							</div>
 						</a>
 						<a class="tocPage05">
@@ -137,7 +147,7 @@
 						</a>
 						<a class="tocPage06">
 							<div class="selectPage">
-								<img src="images/toc/page06.png" alt="page06" width="48" height="48"/>After spending the...
+								<img class="secondObjectTOCThumb" src="images/toc/page06.png" alt="page06" width="48" height="48"/>After spending the...
 							</div>
 						</a>
 						<a class="tocPage07">
@@ -147,7 +157,7 @@
 						</a>
 						<a class="tocPage08">
 							<div class="selectPage">
-								<img src="images/toc/page08.png" alt="page08" width="48" height="48"/>The Princess was...
+								<img class="thirdObjectTOCThumb" src="images/toc/page08.png" alt="page08" width="48" height="48"/>The Princess was...
 							</div>
 						</a>
 						<a class="tocPage09">
