--- a/index.html
+++ b/index.html
@@ -223,19 +223,19 @@
 					<div id="page01" data-thumb="images/thumbs/page01.png">
 						<div class="paragraph">
 							<p>
-								Once upon a time 
-								there was a Princess. 
-								And this Princess’s 
-								dad and mom 
-								(the King and Queen) 
-								somehow got it into 
-								their royal heads 
-								that no Prince 
-								would be good enough 
-								for their girl unless 
-								he could feel a pea 
-								through one hundred 
-								mattresses.  
+								Once upon a time <br/>
+								there was a Princess. <br/>
+								And this Princess’s <br/>
+								dad and mom <br/>
+								(the King and Queen) <br/>
+								somehow got it into <br/>
+								their royal heads <br/>
+								that no Prince <br/>
+								would be good enough <br/>
+								for their girl unless <br/>
+								he could feel a pea <br/>
+								through one hundred <br/>
+								mattresses. 
 							</p>
 						</div>
 						<div class="illustration">
@@ -246,16 +246,16 @@
 					<div id="page02" data-thumb="images/thumbs/page02.png">
 						<div class="paragraph">
 							<p>
-								So it should come as no 
-								surprise that the Princess 
-								had a very hard time 
-								finding a Prince. 
-								Every time she met 
-								a nice boy, 
-								her mom and dad would 
-								pile one hundred 
-								mattresses on top of a pea 
-								and then invite him 
+								So it should come as no <br/>
+								surprise that the Princess <br/>
+								had a very hard time <br/>
+								finding a Prince. <br/>
+								Every time she met <br/>
+								a nice boy, <br/>
+								her mom and dad would <br/>
+								pile one hundred <br/>
+								mattresses on top of a pea <br/>
+								and then invite him <br/>
 								to sleep over. 
 							</p>
 						</div>
@@ -267,17 +267,17 @@
 					<div id="page03" data-thumb="images/thumbs/page03.png">
 						<div class="paragraph">
 							<p>
-								When the Prince 
-								came down 
-								for breakfast, 
-								the Queen would ask, 
-								“How did you sleep, dear?”
-								The Prince would 
-								politely say, 
-								“Fine, thank you.”
-								And the King 
-								would show him 
-								the door.
+								When the Prince <br/>
+								came down <br/>
+								for breakfast, <br/>
+								the Queen would ask, <br/>
+								“How did you sleep, dear?” <br/>
+								The Prince would <br/>
+								politely say, <br/>
+								“Fine, thank you.” <br/>
+								And the King <br/>
+								would show him <br/>
+								the door. 
 							</p>
 						</div>
 						<div class="illustration">
@@ -288,21 +288,21 @@
 					<div id="page04" data-thumb="images/thumbs/page04.png">
 						<div class="paragraph">
 							<p>
-								Now this went on 
-								for three years. 
-								And of course nobody 
-								ever felt the pea under 
-								one hundred mattresses. 
-								Then one day, 
-								the Princess met 
-								the guy of her dreams. 
-								She decided she better 
-								do something about it. 
-								That night, 
-								before the Prince 
-								went to bed, 
-								the Princess slipped 
-								her <span class="firstObjectText"></span> under 
+								Now this went on <br/>
+								for three years. <br/>
+								And of course nobody <br/>
+								ever felt the pea under <br/>
+								one hundred mattresses. <br/>
+								Then one day, <br/>
+								the Princess met <br/>
+								the guy of her dreams. <br/>
+								She decided she better <br/>
+								do something about it. <br/>
+								That night, <br/>
+								before the Prince <br/>
+								went to bed, <br/>
+								the Princess slipped <br/>
+								her <span class="firstObjectText"></span> under <br/>
 								the one hundred mattresses. 
 							</p>
 						</div>
@@ -314,18 +314,18 @@
 					<div id="page05" data-thumb="images/thumbs/page05.png">
 						<div class="paragraph">
 							<p>
-								When the Prince came 
-								down for breakfast 
-								the next moring, 
-								the Queen asked, 
-								“How did you sleep, dear?”
-								The Prince seemed 
-								a little cramped 
-								but politely said, 
-								“Fine, thank you.”
-								The King and Queen
-								saw his discomfort 
-								and decided to grant him 
+								When the Prince came <br/>
+								down for breakfast <br/>
+								the next moring, <br/>
+								the Queen asked, <br/>
+								“How did you sleep, dear?” <br/>
+								The Prince seemed <br/>
+								a little cramped <br/>
+								but politely said, <br/>
+								“Fine, thank you.” <br/>
+								The King and Queen <br/>
+								saw his discomfort <br/>
+								and decided to grant him <br/>
 								another chance. 
 							</p>
 						</div>
@@ -337,18 +337,18 @@
 					<div id="page06" data-thumb="images/thumbs/page06.png">
 						<div class="paragraph">
 							<p>
-								After spending the 
-								entire day together, 
-								the Princess thought of 
-								what else she could use 
-								to make the Prince feel 
-								even more uncomfortable.
-								That night, 
-								before the Prince 
-								went to bed, 
-								the Princess slipped 
-								her <span class="secondObjectText"></span> under 
-								the one hundred mattresses. 
+								After spending the <br/>
+								entire day together, <br/>
+								the Princess thought of <br/>
+								what else she could use <br/>
+								to make the Prince feel <br/>
+								even more uncomfortable. <br/>
+								That night, <br/>
+								before the Prince <br/>
+								went to bed, <br/>
+								the Princess slipped <br/>
+								her <span class="secondObjectText"></span> under <br/>
+								the one hundred mattresses. <br/>
 							</p>
 						</div>
 						<div class="illustration">
@@ -359,16 +359,16 @@
 					<div id="page07" data-thumb="images/thumbs/page07.png">
 						<div class="paragraph">
 							<p>
-								When the Prince limped down the stairs for breakfast 
-								the next moring, 
-								the Queen asked, 
-								“How did you sleep, dear?”
-								The Prince was clearly 
-								distressed but politely 
-								grumbled, “Okay, thanks.”
-								Again, the King and Queen
-								saw his discomfort 
-								and decided to grant him 
+								When the Prince limped down the stairs for breakfast <br/>
+								the next moring, <br/>
+								the Queen asked, <br/>
+								“How did you sleep, dear?” <br/>
+								The Prince was clearly <br/>
+								distressed but politely <br/>
+								grumbled, “Okay, thanks.” <br/>
+								Again, the King and Queen <br/>
+								saw his discomfort <br/>
+								and decided to grant him <br/>
 								one last chance. 
 							</p>
 						</div>
@@ -380,15 +380,15 @@
 					<div id="page08" data-thumb="images/thumbs/page08.png">
 						<div class="paragraph">
 							<p>
-								The Princess was thrilled, but terrified.
-								She .poured over. what else she could use to bring 
-								the Prince excruciating amounts of pain.
-								That night, 
-								before the Prince 
-								went to bed, 
-								the Princess slipped 
-								her <span class="thirdObjectText"></span> 
-								under the one hundred 
+								The Princess was thrilled, but terrified. <br/>
+								She .poured over. what else she could use to bring <br/>
+								the Prince excruciating amounts of pain. <br/>
+								That night, <br/>
+								before the Prince <br/>
+								went to bed, <br/>
+								the Princess slipped <br/>
+								her <span class="thirdObjectText"></span> <br/>
+								under the one hundred <br/>
 								mattresses. 
 							</p>
 						</div>
@@ -400,17 +400,17 @@
 					<div id="page09" data-thumb="images/thumbs/page09.png">
 						<div class="paragraph">
 							<p>
-								When the prince staggered 
-								down the stairs for breakfast 
-								the next morning, 
-								the Queen asked, 
-								“How did you sleep, dear?” 
-								“This might sound odd,” 
-								groaned the prince. 
-								“But I think you need 
-								another mattress. 
-								I felt like I was sleeping 
-								on a lump as big 
+								When the prince staggered <br/>
+								down the stairs for breakfast <br/>
+								the next morning, <br/>
+								the Queen asked, <br/>
+								“How did you sleep, dear?” <br/>
+								“This might sound odd,” <br/>
+								groaned the prince. <br/>
+								“But I think you need <br/>
+								another mattress. <br/>
+								I felt like I was sleeping <br/>
+								on a lump as big <br/>
 								as a <span class="thirdObjectText"></span>.” 
 							</p>
 						</div>
@@ -422,14 +422,15 @@
 					<div id="page10" data-thumb="images/thumbs/page10.png">
 						<div class="paragraph">
 							<p>
-								The King and Queen 
-								were satisfied. 
-								The Princess and Prince were married. 
-								And everyone lived 
-								happily, though maybe 
-								not completely honestly, 
+								The King and Queen <br/>
+								were satisfied. <br/>
+								The Princess and Prince were married. <br/>
+								And everyone lived <br/>
+								happily, though maybe <br/>
+								not completely honestly, <br/>
 								ever after. 
-								
+							</p>
+							<p>	
 								The End.
 							</p>
 						</div>
