--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<img id="img2" href="images/empty.png" alt="empty" width="64" height="64"/>
 				<img id="img3" href="images/empty.png" alt="empty" width="64" height="64"/>
 				-->
-				<img id="character" href="images/character.png" alt="character" width="384" height="512" />
+				<img id="character" src="images/character.png" alt="character" width="384" height="512" />
 			</div>
 		
 			<div id="choose" class="page">
